samples/_failures_safe/1761367865_e2b4aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3aaa46e3.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_3aaa46e3.c:164:9: error: expected declaration or statement at end of input
  164 |         case TOKEN_OPERATOR: return "OPERATOR";
      |         ^~~~
./samples/SAFE/__tmp_3aaa46e3.c:164:9: error: expected declaration or statement at end of input
